k8s/deploy-frontend.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend-deployment
  namespace: chatapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pod
      namespace: chatapp
      labels:
        app: frontend
    spec:
      containers:
      - name: chatapp-frontend
        image: nukeleus/chatapp-frontend:latest
        ports:
        - containerPort: 80
---

kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: chatapp
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
